2001-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el: Rewrite to insert "-" into the name of eol-type
	variants of each newly generated coding-system.

2001-03-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Split files.
	(w3m-coding-system): Changed customize type.
	(w3m-input-coding-system): Ditto.
	(w3m-output-coding-system): Ditto.
	(w3m-bookmark-file-coding-system): Ditto.
	(w3m-url-encode-string): Removed redundant code for Mule-2.

	* w3m-e21.el: New file.

	* w3m-xmas.el: New file.

	* w3m-om.el: New file.

	* w3m-search.el (w3m-search-default-coding-system): Changed
	customize type.
	(w3m-search-engine-alist): Ditto.

	* w3m-weather.el: Fix comments.

2001-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Use the copy of info-vector for newly generated coding-
	systems; use `eval-when-compile' separately from "cl" for loading
	"cl-macs".

2001-03-13  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Split files.
	* w3m-search.el: New file.
	* w3m-weather.el: New file.

2001-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-region): Make no exceptions of Mule 2 in
	coding-systems.
	(w3m-download): Ditto.
	(w3m-local-retrieve): Ditto.
	(w3m-exec-process): Ditto.
	(w3m-arrived-file-coding-system): Unified the default value to
	`euc-japan'.
	(w3m-bookmark-file-coding-system): Ditto.
	(w3m-default-url-coding-system): Ditto.
	(w3m-output-coding-system): Ditto.
	(w3m-coding-system): Ditto.
	(w3m-input-coding-system): Unified the default value to
	`iso-2022-jp'.
	(TopLevel): Generate some coding-systems by copying for Mule 2.
	(TopLevel): Load "cl-macs" if the macro `dolist' has been defined
	incorrectly.

2001-03-13  Masatake YAMATO  <jet@gyve.org>

	* w3m.el (w3m-url-yrotsih): New variable.
	(w3m-view-previous-page): Set w3m-url-yrotsih.
	Use while/cdr instead of nthcdr.
	(w3m-view-next-page): New function.
	(w3m-mode-map): Bind w3m-view-next-page.