@@ -35,6 +35,7 @@
 (require 'poem)
 (require 'pcustom)
 
+
 ;; Generate some coding-systems which have a modern name.
 ;; No need to contain the eol-type variants in the folloing alist
 ;; because they will also be generated for each coding-system.
@@ -73,6 +74,43 @@
 	  (put variant 'coding-system to)
 	  (put variant 'eol-type (setq i (1+ i))))))))
 
-(provide 'w3m-om)
 
+(unless (fboundp 'read-passwd)
+  ;; This code is imported from subr.el of Emacs-20.7 and slightly modified.
+  (defun read-passwd (prompt &optional confirm default)
+    "Read a password, prompting with PROMPT.  Echo `.' for each character typed.
+End with RET, LFD, or ESC.  DEL or C-h rubs out.  C-u kills line.
+Optional argument CONFIRM, if non-nil, then read it twice to make sure.
+Optional DEFAULT is a default password to use instead of empty input."
+    (if confirm
+	(let (success)
+	  (while (not success)
+	    (let ((first (read-passwd prompt nil default))
+		  (second (read-passwd "Confirm password: " nil default)))
+	      (if (equal first second)
+		  (setq success first)
+		(message "Password not repeated accurately; please start over")
+		(sit-for 1))))
+	  success)
+      (let ((pass nil)
+	    (c 0)
+	    (echo-keystrokes 0)
+	    (cursor-in-echo-area t)
+	    (inhibit-input-event-recording t))
+	(while (progn (message "%s%s"
+			       prompt
+			       (make-string (length pass) ?.))
+		      (setq c (read-char-exclusive))
+		      (and (/= c ?\r) (/= c ?\n) (/= c ?\e)))
+	  (if (= c ?\C-u)
+	      (setq pass "")
+	    (if (and (/= c ?\b) (/= c ?\177))
+		(setq pass (concat pass (char-to-string c)))
+	      (if (> (length pass) 0)
+		  (setq pass (substring pass 0 -1))))))
+	(message nil)
+	(or pass default "")))))
+
+
+(provide 'w3m-om)
 ;;; w3m-om.el ends here
