@@ -1344,46 +1344,6 @@ When BUFFER is nil, all data will be inserted in the current buffer."
 	  (setq file (expand-file-name default file))))
     (expand-file-name file)))
 
-(defun w3m-read-passwd (prompt)
-  (let ((inhibit-input-event-recording t))
-    (if (fboundp 'read-passwd)
-	(condition-case nil
-	    (read-passwd prompt)
-	  (error ""))
-      (let ((pass "")
-	    (c 0)
-	    (echo-keystrokes 0)
-	    (ociea cursor-in-echo-area))
-	(condition-case nil
-	    (progn
-	      (setq cursor-in-echo-area 1)
-	      (while (and (/= c ?\r) (/= c ?\n) (/= c ?\e) (/= c 7)) ;; ^G
-		(message "%s%s"
-			 prompt
-			 (make-string (length pass) ?.))
-		(setq c (read-char-exclusive))
-		(cond
-		 ((char-equal c ?\C-u)
-		  (setq pass ""))
-		 ((or (char-equal c ?\b) (char-equal c ?\177))  ;; BS DELL
-		  ;; delete one character in the end
-		  (if (not (equal pass ""))
-		      (setq pass (substring pass 0 -1))))
-		 ((< c 32) ()) ;; control, just ignore
-		 (t
-		  (setq pass (concat pass (char-to-string c))))))
-	      (setq cursor-in-echo-area -1))
-	  (quit
-	   (setq cursor-in-echo-area ociea)
-	   (signal 'quit nil))
-	  (error
-	   ;; Probably not happen. Just align to the code above.
-	   (setq pass "")))
-	(setq cursor-in-echo-area ociea)
-	(message "")
-	(sit-for 0)
-	pass))))
-
 (defun w3m-exec-filter (process string)
   (if (buffer-name (process-buffer process))
       (with-current-buffer (process-buffer process)
@@ -1400,7 +1360,7 @@ When BUFFER is nil, all data will be inserted in the current buffer."
 		   (= (match-end 0) (point-max)))
 	      (setq w3m-process-passwd
 		    (or (nth 1 (w3m-exec-get-user w3m-current-url))
-			(w3m-read-passwd "Password: ")))
+			(read-passwd "Password: ")))
 	      (condition-case nil
 		  (progn
 		    (process-send-string process
